--- a/templates/list.html
+++ b/templates/list.html
@@ -1,27 +1,30 @@
 {% extends "template.html" %}
 {% block conteudo %}
-<table class="table table-striped table-responsive table-bordered">
-    <thead class="thead-default">
-        <tr>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Console</th>
-            <th>Ação</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for game in games%}
-        <tr>
-            <td>{{ game.nome }}</td>
-            <td>{{ game.categoria }}</td>
-            <td>{{ game.console }}</td>
-            <td>
-                <a href="{{ url_for('editar', id=game.id)}}">Editar</a>
-                <a href="{{ url_for('deletar', id=game.id)}}">Deletar</a>
-            </td>
-        </tr>
-        {% endfor%}
-    </tbody>
-</table>
+    <a class="btn btn-primary" href="{{ url_for('login')}}">Login</a>
+    <a class="btn btn-danger" href="{{ url_for('logout')}}">Logout</a>
+    <a class="btn btn-success" href="{{ url_for('new')}}">Novo Jogo</a>
+    <table class="table table-striped table-responsive table-bordered">
+        <thead class="thead-default">
+            <tr>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Console</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for game in games%}
+            <tr>
+                <td>{{ game.nome }}</td>
+                <td>{{ game.categoria }}</td>
+                <td>{{ game.console }}</td>
+                <td>
+                    <a href="{{ url_for('editar', id=game.id)}}">Editar</a>
+                    <a href="{{ url_for('deletar', id=game.id)}}">Deletar</a>
+                </td>
+            </tr>
+            {% endfor%}
+        </tbody>
+    </table>
 {% endblock %}
 
