--- a/static/app.css
+++ b/static/app.css
@@ -1,6 +1,3 @@
-body {
-    padding-top: 10px;
-}
 
 .btn {
     margin-bottom: 10px;
@@ -65,4 +62,13 @@ td {
     width: 100%;
     margin-left: 1em;
     margin-bottom: 1em;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
 }
