--- a/templates/template.html
+++ b/templates/template.html
@@ -5,9 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Jogoteca</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Parking System</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('index') }}">List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('new') }}">New Game</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         {% with messages = get_flashed_messages() %}
             {% if messages %} 
@@ -23,8 +44,32 @@
         </div>
 
         {% block conteudo %}{% endblock %}
-        <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+
+        
+
+
+        
     </div>
+
+    <div class="footer">
+
+        <footer class="bg-dark text-center text-white">
+            <div class="p-4 pb-0">
+                <section class="mb-4">
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/pedro-henrique-do-prado-paiva-81944921a/" role="button"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Pedro-Prado-Dev" role="button"><i class="fab fa-github"></i></a>
+                </section>
+            </div>
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2024 Copyright:
+                <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+            </div>
+        </footer>
+        
+    </div>
+
+
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
