--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
             <div class="form-group buttons">
                 {{ form.login(class="btn btn-primary") }}
                 <a class="btn btn-danger" href="{{ url_for('index')}}">Voltar</a>
+                <a class="btn btn-secondary" href="{{ url_for('novo_usuario')}}">Cadastrar</a>
             </div>
         </form>
     </div>
